Prevented horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
 .App {
   min-height: 100vh;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
